--- a/css/uslugi.css
+++ b/css/uslugi.css
@@ -11,7 +11,9 @@
 * html .clearfix { height: 1%; }
 .clearfix { display: block; }
 /* close commented backslash hack */
-
+body {
+  margin: 0;
+}
 .site-header {
  	background: #54B948
  }
