--- a/css/css.css
+++ b/css/css.css
@@ -175,7 +175,7 @@ margin-right: 20px;
 .koko {
   text-align: center;
   font-size: 20px;
-  background-color: red;
+  background-color: white;
   margin-top: 10px;
   color: white;
 }
