--- a/css/css.css
+++ b/css/css.css
@@ -179,3 +179,9 @@ margin-right: 20px;
   margin-top: 10px;
   color: white;
 }
+.skidka {
+  color: red;
+text-align: center;
+padding: 0px;
+line-height: 10px;
+}
